# ml-case-studies

./: .gitignore  01_classificacao_multiclasse_iris_estudo_comparativo.ipynb  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh
notebooks/: 01_classificacao_multiclasse_iris_estudo_comparativo.ipynb  02_regressao_analise_preditiva_preco_casas.ipynb
notebooks/examples/: hyperparameter-tuning-with-child-runs.ipynb
notebooks/models/: decision_tree.pkl  knn.pkl  logistic_regression.pkl  mlp.pkl  perceptron.pkl  svm.pkl
